--- a/src/pages/auth/login/login.component.html
+++ b/src/pages/auth/login/login.component.html
@@ -4,7 +4,7 @@
         <img class="title" src="/images/app-title.png">
     </div>
     <div class="login-form">
-        <form [formGroup]="form" (ngSubmit)="submit()" autocomplete="on">
+        <form [formGroup]="form" (ngSubmit)="submit()" autocomplete="on" ngNativeValidate>
             <div class="input-field">
                 <label for="email">Email: </label>
                 <input type="email" formControlName="email" name="email" id="email" autocomplete="email" required>
