--- a/src/pages/dispatch/dispatch-details/bulk-dispatch-details/bulk-dispatch-details.component.html
+++ b/src/pages/dispatch/dispatch-details/bulk-dispatch-details/bulk-dispatch-details.component.html
@@ -4,7 +4,7 @@
         <h2>Courier Detail Upload</h2>
         <div class="flex">
             <input type="file" (change)="fileSelected($event)">
-            <button mat-flat-button type="button" color="primary" (click)="downloadFile()">Download</button>
+            <button mat-flat-button type="button" color="primary" (click)="downloadFile()">Download Format</button>
             <button mat-flat-button type="button" color="primary" (click)="uploadFile()">Upload</button>
         </div>
     </div>
