--- a/src/pages/master/customer/customer-item-master/edit-customer-item-master/edit-customer-item-master.component.html
+++ b/src/pages/master/customer/customer-item-master/edit-customer-item-master/edit-customer-item-master.component.html
@@ -27,7 +27,7 @@
         </div>
         <div class="input-field">
             <label for="minOrderQty">Minimum Order Qty<span class="imp">*</span></label>
-            <input type="number" formControlName="minOrderQty">
+            <input type="number" formControlName="minOrderQty" required>
         </div>
         <div class="input-field"></div>
         <div class="input-field"></div>
