--- a/src/pages/master/customer/customer-master/edit-customer-master/edit-customer-master.component.html
+++ b/src/pages/master/customer/customer-master/edit-customer-master/edit-customer-master.component.html
@@ -4,7 +4,7 @@
 
 <div class="form-container">
     <h3>1. Customer Detail</h3>
-    <form [formGroup]="form">
+    <form [formGroup]="form" ngNativeValidate (ngSubmit)="submit()">
         <div class="input-field">
             <label for="customerName">Customer Name<span class="imp">*</span></label>
             <input type="text" formControlName="customerName">
@@ -46,52 +46,59 @@
             <input type="text" formControlName="city">
         </div>
         <div class="input-field"></div>
+
+        <div class="c-flex">
+            <div class="customer-contact-persons">
+                <h3>2. Customer Contact Detail</h3>
+                <div class="flex">
+                    @for (contact of contacts; track $index) {
+                    <div class="customer-contact">
+                        <div class="edit"><button mat-icon-button type="button"
+                                (click)="editContact(contact ,$index)"><mat-icon>edit_note</mat-icon></button></div>
+                        <div class="close"><button mat-icon-button type="button"
+                                (click)="removeContacts($index)"><mat-icon>cancel</mat-icon></button></div>
+                        <span>{{ contact.name | shorten }}</span>
+                        <span>{{ contact.mobileNo }}</span>
+                        <span>{{ contact.landLineNo }}</span>
+                        <span>{{ contact.email }}</span>
+                        <span>{{ contact.designation }}</span>
+                        <span>{{ contact.remark }}</span>
+                    </div>
+                    }
+                    <div class="contact-add" matRipple>
+                        <mat-icon (click)="openCustomerContactDialog()">add</mat-icon>
+                    </div>
+                </div>
+            </div>
+
+            <div class="customer-contact-persons">
+                <h3>3. Customer Billing Detail</h3>
+                <div class="flex">
+                    @for (billing of billings; track $index) {
+                    <div class="customer-contact">
+                        <div class="edit"><button mat-icon-button type="button"
+                                (click)="editBilling(billing ,$index)"><mat-icon>edit_note</mat-icon></button></div>
+                        <div class="close"><button mat-icon-button type="button"
+                                (click)="removeBillings($index)"><mat-icon>cancel</mat-icon></button></div>
+                        <span>{{ billing.address }}</span>
+                        <span>{{ billing.mobileNo }}</span>
+                        <span>{{ billing.state }}</span>
+                        <span>{{ billing.city }}</span>
+                        <span>{{ billing.pincode }}</span>
+                    </div>
+                    }
+                    <div class="contact-add">
+                        <button mat-icon-button type="button"
+                            (click)="openCustomerBillingDialog()"><mat-icon>add</mat-icon></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="action-btns">
+                <button mat-flat-button type="submit">Update</button>
+                <button mat-button type="button" (click)="navigateToListUserPage()">Cancel</button>
+            </div>
+        </div>
+
     </form>
-
-    <div class="c-flex">
-        <div class="customer-contact-persons">
-            <h3>2. Customer Contact Detail</h3>
-            <div class="flex">
-                @for (contact of contacts; track $index) {
-                <div class="customer-contact" (click)="editContact(contact ,$index)">
-                    <div class="close"><mat-icon (click)="removeContacts($index)">cancel</mat-icon></div>
-                    <span>{{ contact.name | shorten }}</span>
-                    <span>{{ contact.mobileNo }}</span>
-                    <span>{{ contact.landLineNo }}</span>
-                    <span>{{ contact.email }}</span>
-                    <span>{{ contact.designation }}</span>
-                    <span>{{ contact.remark }}</span>
-                </div>
-                }
-                <div class="contact-add" matRipple>
-                    <mat-icon (click)="openCustomerContactDialog()">add</mat-icon>
-                </div>
-            </div>
-        </div>
-
-        <div class="customer-contact-persons">
-            <h3>3. Customer Billing Detail</h3>
-            <div class="flex">
-                @for (billing of billings; track $index) {
-                <div class="customer-contact" (click)="editBilling(billing ,$index)">
-                    <div class="close"><mat-icon (click)="removeBillings($index)">cancel</mat-icon></div>
-                    <span>{{ billing.address }}</span>
-                    <span>{{ billing.mobileNo }}</span>
-                    <span>{{ billing.state }}</span>
-                    <span>{{ billing.city }}</span>
-                    <span>{{ billing.pincode }}</span>
-                </div>
-                }
-                <div class="contact-add">
-                    <button mat-icon-button type="button"
-                        (click)="openCustomerBillingDialog()"><mat-icon>add</mat-icon></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="action-btns">
-            <button mat-flat-button type="submit" (click)="submit()">Update</button>
-            <button mat-button type="button" (click)="navigateToListUserPage()">Cancel</button>
-        </div>
-    </div>
 </div>
