--- a/src/pages/auth/login/login.component.scss
+++ b/src/pages/auth/login/login.component.scss
@@ -1,24 +1,23 @@
 @use "../../../constants/colors.scss" as color;
 
-*{
-  margin: 0;
-  padding: 0;
-}
+
 
 .container{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  margin-top: 20vh;
-  overflow: hidden !important;
+  gap: 100px;
+  width: 60vw;
+  margin: 0 auto;
+  height: 80vh;
 }
 
 .app-data{
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex: 1;
   
   .icon{
     width: 250px;
@@ -31,7 +30,7 @@
 }
 
 .login-form{
-  flex: 1;
+  width: 50%;
 
   label{
     font-weight: bold;
