--- a/src/pages/dispatch/dispatch-details/edit-dispatch-details/edit-dispatch-details.component.html
+++ b/src/pages/dispatch/dispatch-details/edit-dispatch-details/edit-dispatch-details.component.html
@@ -91,8 +91,8 @@
         </table>
     </div>
     <br>
-    <div class="actn-btns">
-        <button type="submit" (click)="submit()">Save</button>&nbsp;&nbsp;
+    <div class="action-btns">
+        <button type="submit" (click)="submit()">Save</button>
         <button type="button" (click)="cancel()">Cancel</button>
     </div>
 </div>
