--- a/src/pages/dispatch/dispatch-details/edit-dispatch-details/edit-dispatch-details.component.scss
+++ b/src/pages/dispatch/dispatch-details/edit-dispatch-details/edit-dispatch-details.component.scss
@@ -67,5 +67,65 @@ table {
         outline-color: #abc7ff;
       }
     }
+
+    tr > th,
+    tr > td {
+      input[type="checkbox"] {
+        transform: scale(1.3);
+        margin: 5px;
+      }
+
+      &:first-child {
+        width: 10%;
+      }
+
+      &:nth-child(2) {
+        width: 40%;
+      }
+
+      &:nth-child(3) {
+        width: 10%;
+      }
+
+      &:nth-child(4) {
+        width: 10%;
+      }
+
+      &:nth-child(5) {
+        width: 10%;
+      }
+
+      &:nth-child(6) {
+        width: 10%;
+      }
+
+      &:nth-child(7) {
+        width: 5%;
+      }
+
+      &:nth-child(8) {
+        width: 5%;
+      }
+
+      &:nth-child(9) {
+        width: 10%;
+      }
+
+      font-size: 0.9rem;
+    }
   }
+}
+
+input {
+  height: 1.5rem;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  background-color: #fff;
+  color: #495057;
+}
+
+input:focus,
+select:focus,
+textarea:focus {
+  outline-color: #abc7ff;
 }
