--- a/src/pages/dispatch/stationery-dispatch/edit-stationery-dispatch/edit-stationery-dispatch.component.scss
+++ b/src/pages/dispatch/stationery-dispatch/edit-stationery-dispatch/edit-stationery-dispatch.component.scss
@@ -25,8 +25,22 @@ table {
 }
 
 .btns {
-  > button {
-    margin-right: 10px;
+  button {
+    margin: 10px;
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+    font-family: ROBOTO-REGULAR;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    background-color: #007bff;
+    color: white;
+
+    &:hover {
+      background-color: #0056b3;
+    }
   }
 }
 
@@ -66,6 +80,40 @@ table {
       select:focus {
         outline-color: #abc7ff;
       }
+    }
+
+    tr > th,
+    tr > td {
+      input[type="checkbox"] {
+        transform: scale(1.3);
+        margin: 5px;
+      }
+
+      &:first-child {
+        width: 5%;
+      }
+
+      &:nth-child(2) {
+        width: 10%;
+      }
+
+      &:nth-child(3) {
+        width: 30%;
+      }
+
+      &:nth-child(4) {
+        width: 10%;
+      }
+
+      &:nth-child(5) {
+        width: 10%;
+      }
+
+      &:nth-child(6) {
+        width: 17%;
+      }
+
+      font-size: 0.9rem;
     }
   }
 }
