--- a/src/pages/master/aos-user/courier-company-master/edit-courier-company-master/edit-courier-company-master.component.html
+++ b/src/pages/master/aos-user/courier-company-master/edit-courier-company-master/edit-courier-company-master.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="input-field"></div>
     <div class="action-btns">
-      <button type="submit" (click)="submit()">Update</button>
+      <button type="submit">Update</button>
       <button type="button" (click)="navigateToListCourierPage()">Cancel</button>
     </div>
   </form>
