--- a/src/pages/master/aos-user/gst-rate-master/edit-gst-rate-master/edit-gst-rate-master.component.html
+++ b/src/pages/master/aos-user/gst-rate-master/edit-gst-rate-master/edit-gst-rate-master.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="container">
-  <form [formGroup]="form" ngNativeValidate>
+  <form [formGroup]="form" ngNativeValidate (ngSubmit)="submit()">
     <div class="input-field">
       <label for="rate">GST Rate(in %)<span class="imp">*</span></label>
       <input type="number" class="input-txt" formControlName="rate" required>
@@ -14,7 +14,7 @@
     </div>
     <div class="input-field"></div>
     <div class="action-btns">
-      <button type="submit" (click)="submit()">Update</button>
+      <button type="submit">Update</button>
       <button type="button" (click)="navigateToListGstPage()">Cancel</button>
     </div>
   </form>
