--- a/src/pages/master/customer/customer-item-master/create-customer-item-master/create-customer-item-master.component.html
+++ b/src/pages/master/customer/customer-item-master/create-customer-item-master/create-customer-item-master.component.html
@@ -3,10 +3,10 @@
 </div>
 
 <div class="form-container">
-    <form [formGroup]="form">
+    <form [formGroup]="form" ngNativeValidate (ngSubmit)="submit()">
         <div class="input-field">
             <label for="item">AOS Item Name<span class="imp">*</span></label>
-            <select formControlName="item">
+            <select formControlName="item" required> >
                 @for (item of items; track item) {
                 <option [value]="item.field">{{ item.value }}</option>
                 }
@@ -14,7 +14,7 @@
         </div>
         <div class="input-field">
             <label for="customer">Select Customer<span class="imp">*</span></label>
-            <select formControlName="customer">
+            <select formControlName="customer" required>
                 @for (customer of customers; track customer) {
                 <option [value]="customer.field">{{ customer.value }}</option>
                 }
@@ -22,11 +22,11 @@
         </div>
         <div class="input-field">
             <label for="itemName">Customer Item Name Alias<span class="imp">*</span></label>
-            <input type="text" formControlName="itemName">
+            <input type="text" formControlName="itemName" required>
         </div>
         <div class="input-field">
             <label for="itemCode">Customer Item Code Alias<span class="imp">*</span></label>
-            <input type="text" formControlName="itemCode">
+            <input type="text" formControlName="itemCode" required>
         </div>
         <div class="input-field">
             <label for="itemPrice">Customer Item Price<span class="imp">*</span></label>
@@ -34,12 +34,12 @@
         </div>
         <div class="input-field">
             <label for="minOrderQty">Minimum Order Qty<span class="imp">*</span></label>
-            <input type="number" formControlName="minOrderQty">
+            <input type="number" formControlName="minOrderQty" required>
         </div>
         <div class="input-field"></div>
         <div class="input-field"></div>
         <div class="action-btns">
-            <button mat-flat-button type="submit" (click)="submit()">Submit</button>
+            <button mat-flat-button type="submit">Submit</button>
             <button mat-button type="button" (click)="navigateToListCustomerItemPage()">
                 Cancel
             </button>
