--- a/src/pages/master/customer/customer-master/create-customer-master/create-customer-master.component.html
+++ b/src/pages/master/customer/customer-master/create-customer-master/create-customer-master.component.html
@@ -4,22 +4,22 @@
 
 <div class="form-container">
     <h3>1. Customer Detail</h3>
-    <form [formGroup]="form">
+    <form [formGroup]="form" ngNativeValidate (ngSubmit)="submit()">
         <div class="input-field">
             <label for="customerName">Customer Name<span class="imp">*</span></label>
-            <input type="text" formControlName="customerName">
+            <input type="text" formControlName="customerName" required>
         </div>
         <div class="input-field">
-            <label for="customerLoginPageUrl">Customer Login Page URL</label>
-            <input type="text" formControlName="customerLoginPageUrl">
+            <label for="customerLoginPageUrl">Customer Login Page URL<span class="imp">*</span></label>
+            <input type="text" formControlName="customerLoginPageUrl" required>
         </div>
         <div class="input-field">
             <label for="email">Email<span class="imp">*</span></label>
-            <input type="email" formControlName="email">
+            <input type="email" formControlName="email" required>
         </div>
         <div class="input-field">
             <label for="modeOfPayment">Payment Terms<span class="imp">*</span></label>
-            <select formControlName="modeOfPayment">
+            <select formControlName="modeOfPayment" required>
                 @for (payment of payments; track payment) {
                 <option [value]="payment">{{ payment }}</option>
                 }
@@ -27,75 +27,77 @@
         </div>
         <div class="input-field">
             <label for="shippingChargesPaidBy">Shipping Charges Paid By<span class="imp">*</span></label>
-            <select formControlName="shippingChargesPaidBy">
+            <select formControlName="shippingChargesPaidBy" required>
                 @for (paid of paidBy; track paid) {
                 <option [value]="paid">{{ paid }}</option>
                 }
             </select>
         </div>
         <div class="input-field">
-            <label for="gstNo">Customer GST Number</label>
-            <input type="text" formControlName="gstNo">
+            <label for="gstNo">Customer GST Number<span class="imp">*</span></label>
+            <input type="text" formControlName="gstNo" required>
         </div>
         <div class="input-field">
-            <label for="state">State</label>
-            <input type="text" formControlName="state">
+            <label for="state">State<span class="imp">*</span></label>
+            <input type="text" formControlName="state" required>
         </div>
         <div class="input-field">
-            <label for="city">City/Location</label>
-            <input type="text" formControlName="city">
+            <label for="city">City/Location<span class="imp">*</span></label>
+            <input type="text" formControlName="city" required>
         </div>
         <div class="input-field"></div>
+
+
+        <div class="c-flex">
+            <div class="customer-contact-persons">
+                <h3>2. Customer Contact Detail</h3>
+                <div class="flex">
+                    @for (contact of contacts; track $index) {
+                    <div class="customer-contact">
+                        <div class="close"><mat-icon (click)="removeContacts($index)">cancel</mat-icon></div>
+                        <span (click)="openContact.set(true)">{{ contact.name | shorten }}</span>
+                        <span (click)="openContact.set(true)">{{ contact.mobileNo }}</span>
+                        <span (click)="openContact.set(true)">{{ contact.landLineNo }}</span>
+                        <span (click)="openContact.set(true)">{{ contact.email }}</span>
+                        <span (click)="openContact.set(true)">{{ contact.designation }}</span>
+                        <span (click)="openContact.set(true)">{{ contact.remark }}</span>
+                    </div>
+                    }
+                    <div class="contact-add" matRipple>
+                        <mat-icon (click)="openCustomerContactDialog()">add</mat-icon>
+                    </div>
+                </div>
+            </div>
+
+            <div class="customer-contact-persons">
+                <h3>3. Customer Billing Detail</h3>
+                <div class="flex">
+                    @for (billing of billings; track $index) {
+                    <div class="customer-contact" (click)="editBilling(billing ,$index)">
+                        <div class="close"><mat-icon (click)="removeBillings($index)">cancel</mat-icon></div>
+                        <span (click)="openBilling.set(true)">{{ billing.address }}</span>
+                        <span (click)="openBilling.set(true)">{{ billing.mobileNo }}</span>
+                        <span (click)="openBilling.set(true)">{{ billing.state }}</span>
+                        <span (click)="openBilling.set(true)">{{ billing.city }}</span>
+                        <span (click)="openBilling.set(true)">{{ billing.pincode }}</span>
+                    </div>
+                    }
+                    <div class="contact-add">
+                        <button mat-icon-button type="button"
+                            (click)="openCustomerBillingDialog()"><mat-icon>add</mat-icon></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="action-btns">
+                <button mat-flat-button type="submit">Submit</button>
+                <button mat-button type="button" (click)="navigateToListUserPage()">
+                    Cancel
+                </button>
+            </div>
+        </div>
+
     </form>
-
-    <div class="c-flex">
-        <div class="customer-contact-persons">
-            <h3>2. Customer Contact Detail</h3>
-            <div class="flex">
-                @for (contact of contacts; track $index) {
-                <div class="customer-contact">
-                    <div class="close"><mat-icon (click)="removeContacts($index)">cancel</mat-icon></div>
-                    <span (click)="openContact.set(true)">{{ contact.name | shorten }}</span>
-                    <span (click)="openContact.set(true)">{{ contact.mobileNo }}</span>
-                    <span (click)="openContact.set(true)">{{ contact.landLineNo }}</span>
-                    <span (click)="openContact.set(true)">{{ contact.email }}</span>
-                    <span (click)="openContact.set(true)">{{ contact.designation }}</span>
-                    <span (click)="openContact.set(true)">{{ contact.remark }}</span>
-                </div>
-                }
-                <div class="contact-add" matRipple>
-                    <mat-icon (click)="openCustomerContactDialog()">add</mat-icon>
-                </div>
-            </div>
-        </div>
-
-        <div class="customer-contact-persons">
-            <h3>3. Customer Billing Detail</h3>
-            <div class="flex">
-                @for (billing of billings; track $index) {
-                <div class="customer-contact" (click)="editBilling(billing ,$index)">
-                    <div class="close"><mat-icon (click)="removeBillings($index)">cancel</mat-icon></div>
-                    <span (click)="openBilling.set(true)">{{ billing.address }}</span>
-                    <span (click)="openBilling.set(true)">{{ billing.mobileNo }}</span>
-                    <span (click)="openBilling.set(true)">{{ billing.state }}</span>
-                    <span (click)="openBilling.set(true)">{{ billing.city }}</span>
-                    <span (click)="openBilling.set(true)">{{ billing.pincode }}</span>
-                </div>
-                }
-                <div class="contact-add">
-                    <button mat-icon-button type="button"
-                        (click)="openCustomerBillingDialog()"><mat-icon>add</mat-icon></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="action-btns">
-            <button mat-flat-button type="submit" (click)="submit()">Submit</button>
-            <button mat-button type="button" (click)="navigateToListUserPage()">
-                Cancel
-            </button>
-        </div>
-    </div>
 
 
 </div>
