--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,7 +95,8 @@ h3 {
   }
 
   input,
-  select {
+  select,
+  textarea {
     height: 1.5rem;
     padding: 0.375rem 0.75rem;
     border: 1px solid #ced4da;
@@ -106,7 +107,8 @@ h3 {
   }
 
   input:focus,
-  select:focus {
+  select:focus,
+  textarea:focus {
     outline-color: #abc7ff;
   }
 
@@ -220,10 +222,17 @@ h3 {
   position: relative;
   font-size: 0.9rem;
 
+  .edit {
+    position: absolute;
+    top: 5px;
+    right: 40px;
+    cursor: pointer;
+  }
+  
   .close {
     position: absolute;
     top: 5px;
-    right: 5px;
+    right: 0;
     cursor: pointer;
   }
 }
