--- a/src/pages/dispatch/dispatch-details/bulk-dispatch-details/bulk-dispatch-details.component.scss
+++ b/src/pages/dispatch/dispatch-details/bulk-dispatch-details/bulk-dispatch-details.component.scss
@@ -1,3 +1,5 @@
+@use "../../../../constants/colors.scss" as color;
+
 .container{
     margin: 25px auto;
     padding: 25px 50px;
@@ -12,8 +14,9 @@
 
     .flex{
         display: flex;
-        align-items: center;
+        flex-direction: column;
         justify-content: space-between;
+        align-items: flex-start;
     }
 
     margin: 0 auto;
@@ -27,10 +30,14 @@ table{
 tr>th,tr>td{
     border: 1px solid #ccc;
     padding: 5px 10px;
+    font-family: ROBOTO-THIN;
+    text-align: center;
+    padding: 5px 10px;
 }
 
 select{
     padding: 5px;
+    border: 1px solid #ccc;
 }
 
 .body{
@@ -52,4 +59,9 @@ select{
 .disable {
     pointer-events: none; 
     opacity: 0.5; 
+  }
+
+  button{
+    background-color: color.$submitBtnColor !important;
+    font-family: ROBOTO-MEDIUM;
   }
