--- a/src/pages/dashboard/dashboard.component.html
+++ b/src/pages/dashboard/dashboard.component.html
@@ -1,35 +1,43 @@
 <div class="container">
-  <div class="title-animation">
-    <!-- For any queries, contact us at 8080021333 or via email at
-    {{ "info@applestationers.com" }}. Support time from 10:30 am to 5:00 pm
-    (Monday to Saturday) -->
+  <div class="left-section">
+    <div class="card">
+      <div class="count">0</div>
+      <div class="label">Todays Pending<br>Assign Vendors</div>
+    </div>
+    <div class="card">
+      <div class="count">0</div>
+      <div class="label">Todays VC Orders</div>
+    </div>
+    <div class="card">
+      <div class="count">12</div>
+      <div class="label">Total Pending<br>Assign Vendors</div>
+    </div>
+    <div class="card">
+      <div class="count">2994</div>
+      <div class="label">Wo not Received</div>
+    </div>
+    <div class="card">
+      <div class="count">0</div>
+      <div class="label">Wo received but<br>not dispatch</div>
+    </div>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <div class="data">
-   @for (item of items; track $index) {
-    <mat-card appearance="outlined">
-        <mat-card-header>
-          <mat-card-title> Australian Shepherd</mat-card-title>
-          <mat-card-subtitle>Herding group</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-actions>
-          <button mat-button>Learn More</button>
-        </mat-card-actions>
-      </mat-card>
-      <br>
-      <mat-card appearance="outlined">
-        <mat-card-header>
-          <mat-card-title>Poodle</mat-card-title>
-          <mat-card-subtitle>Non-sporting group</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-actions align="end">
-          <button mat-button>Learn More</button>
-        </mat-card-actions>
-      </mat-card>
-      
-   }
-  </div>
+
+  <div class="left-section">
+      <div class="card red" (click)="navigate('red')">
+        <div class="count">35</div>
+        <div class="label">Tickets</div>
+      </div>
+      <div class="card orange">
+        <div class="count">1</div>
+        <div class="label">Tickets</div>
+      </div>
+      <div class="card green">
+        <div class="count">2</div>
+        <div class="label">Tickets</div>
+      </div>
+      <div class="card grey">
+        <div class="count">38</div>
+        <div class="label">Open Tickets</div>
+      </div>
+    </div>
 </div>
