--- a/src/dialogs/chat/chat.component.html
+++ b/src/dialogs/chat/chat.component.html
@@ -7,7 +7,7 @@
 
 <mat-dialog-content class="chat-container">
     <div class="ticket-info">
-        <div><strong>Order Id :</strong>&nbsp;{{ 'ORD' + data.data.orderId }}</div>
+        <div><strong>Ticket Id :</strong>&nbsp;<span style="color: blue;">{{ ticketStatus.ticketId }}</span></div>
         <div><strong>Subject :</strong>&nbsp;{{ ticketStatus.subject }}</div>
     </div>
 
