--- a/src/pages/ticket-status/ticket-status.component.scss
+++ b/src/pages/ticket-status/ticket-status.component.scss
@@ -207,3 +207,16 @@ img {
   font-size: 1rem;
   margin-left: 10px;
 }
+
+.close-ticket{
+  color: red;
+  font-size: 1rem;
+  margin-left: 10px;
+  border: none;
+  background-color: transparent;
+
+  &:hover{
+    cursor: pointer;
+    color: darkred;
+  }
+}
