--- a/src/pages/auth/login/login.component.html
+++ b/src/pages/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="app-data">
-        <img class="icon" src="/images/app-icon.png">
-        <img class="title" src="/images/app-title.png">
+        <img class="icon" src="/images/AIRO-FILE.png">
+        <!-- <img class="title" src="/images/app-title.png"> -->
     </div>
     <div class="login-form">
         <form [formGroup]="form" (ngSubmit)="submit()" autocomplete="on" ngNativeValidate>
