--- a/src/pages/dispatch/dispatch-details/reports/reports.component.html
+++ b/src/pages/dispatch/dispatch-details/reports/reports.component.html
@@ -24,7 +24,9 @@
         <mat-radio-button value="order_not_dispatch" (change)="type.set($event.value)"><span class="type"> Order Not
                 Dispatch</span></mat-radio-button> &nbsp;&nbsp;<br>
         <mat-radio-button value="all_approved_orders" (change)="type.set($event.value)"><span class="type">All Approved
-                Orders</span></mat-radio-button><br>
+                Orders</span></mat-radio-button> &nbsp;&nbsp;<br>
+        <mat-radio-button value="all_not_approved_orders" (change)="type.set($event.value)"><span class="type">All Not Approved
+                Orders</span></mat-radio-button> &nbsp;&nbsp;<br>
     </mat-radio-group>
     <br>
     <div class="action-btns" style="margin-left: 15px;">
