--- a/src/pages/master/customer/customer-item-master/edit-customer-item-master/edit-customer-item-master.component.html
+++ b/src/pages/master/customer/customer-item-master/edit-customer-item-master/edit-customer-item-master.component.html
@@ -6,31 +6,33 @@
     <form [formGroup]="form" ngNativeValidate (ngSubmit)="submit()">
         <div class="input-field">
             <label for="item">AOS Item Name<span class="imp">*</span></label>
-            <input type="text" formControlName="item" required readonly>
+            <input type="text" placeholder="Select Item" formControlName="item" [matAutocomplete]="auto" required readonly>
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                <mat-option *ngFor="let item of filteredItems | async" [value]="item">
+                    {{ item.value }}
+                </mat-option>
+            </mat-autocomplete>
         </div>
         <div class="input-field">
             <label for="customer">Select Customer<span class="imp">*</span></label>
             <input type="text" formControlName="customer" required readonly>
         </div>
-        <div class="input-field"></div>
         <div class="input-field">
-            <label for="itemName">Customer Item Name Alias</label>
-            <input type="text" formControlName="aliasItemName" required>
+            <label for="itemAliasName">Customer Item Name Alias<span class="imp">*</span></label>
+            <input type="text" formControlName="itemAliasName" required>
         </div>
         <div class="input-field">
-            <label for="itemCode">Customer Item Code Alias<span class="imp">*</span></label>
-            <input type="text" formControlName="aliasItemCode" required>
+            <label for="itemAliasCode">Customer Item Code Alias<span class="imp">*</span></label>
+            <input type="text" formControlName="itemAliasCode" required>
         </div>
         <div class="input-field">
-            <label for="itemPrice">Customer Item Price <span class="imp">*</span></label>
-            <input type="number" step="any" formControlName="aliasItemPrice" required>
+            <label for="itemPrice">Customer Item Price<span class="imp">*</span></label>
+            <input type="number" step="any" formControlName="itemPrice" required>
         </div>
         <div class="input-field">
             <label for="minOrderQty">Minimum Order Qty<span class="imp">*</span></label>
             <input type="number" formControlName="minOrderQty" required>
         </div>
-        <div class="input-field"></div>
-        <div class="input-field"></div>
         <div class="action-btns">
             <button mat-flat-button type="submit">Submit</button>
             <button mat-button type="button" (click)="navigateToListCustomerItemPage()">Cancel</button>
